5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1836_2603.log
== TEST (2019-06-27 11:41:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("matriz4x4: ")))
m=m
for i in range(4):
	a[:,i]= sorted[:,1], reverse= True
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:41:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("matriz4x4: ")))
m=m
for i in range(4):
	m[:,i]= sorted[:,1], reverse= True
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:41:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("matriz4x4: ")))
m=m
for i in range(4):
	m[:,i]= sorted([:,1], reverse = True)
print(m)	
-- ERROR:
File "XXXX", line 7
    m[:,i]= sorted([:,1], reverse = True)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:42:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("matriz4x4: ")))
m=m
for i in range(4):
	m[:,i]= sorted(m[:,1], reverse = True)
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:42:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("matriz4x4: ")))
m=m
for i in range(4):
	m[:,i]= sorted(m[:,1], reverse = True)
print(m)	
-- EXECUTION TIME:
1.21176
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:42:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("matriz4x4: ")))
m=m
for i in range(4):
	m[:,i]= sorted(m[:,1], reverse = True)
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:43:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("matriz4x4: ")))
m=m
for i in range(4):
	m[:,i]= sorted(m[:,i], reverse = True)
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:43:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("matriz4x4: ")))
m=m
for i in range(4):
	m[:,i]= sorted(m[:,i], reverse = True)
print(m)	
-- EXECUTION TIME:
1.04477
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
